# Embodied-AI-Lab

./: .gitignore  CLAUDE.md  CONTRIBUTING.en.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  git-commit.sh
archive/: README.en.md  README.md
archive/legacy-experiments/: README.en.md  README.md
docs/curriculum/: README.en.md  README.md  legacy-to-direction-map.en.md  legacy-to-direction-map.md  python-first-ros2-ready.en.md  python-first-ros2-ready.md
docs/xidian-micro-major/: CROSS_DEVICE_HANDOFF.md  From_traditional_image_processing_to_deep_learning.en.md  README.en.md  (+7 more)
imgproc-cli/: camera_to_gym_obs.py  resize_and_save.py  simulated_camera.py  test_opencv.py
labs/RAG_manage/: app.py  pyproject.toml  test_prompts.py
labs/RAG_manage/docs/superpowers/plans/: 2026-07-06-rag-cleaner-pipeline-plan.md
labs/RAG_manage/docs/superpowers/specs/: 2026-07-06-rag-cleaner-pipeline-design.md
labs/RAG_manage/prompts/: index-update.md  ingest-batch.md  ingest-single.md  lint-knowledge.md  memory-log.md  memory-recall.md  query-knowledge.md  system-agent.md
labs/RAG_manage/src/: __init__.py  chunker.py  cleaner.py  client.py  config.py  exporter.py  retry.py  validator.py
labs/RAG_manage/tests/: __init__.py  test_pipeline.py
shared/: README.en.md  README.md
tests/: test_camera_calibration_docs.py  test_kf_external_data_contract.py  test_motion_control_level1_pid_playground.py  test_perception_level1_docs.py  test_perception_level1_vision.py  test_public_bilingual_docs.py  test_slam_navigation_level1_grid_search.py  test_slam_navigation_level1_mcl_ekf_slam.py
(+315 files in other folders)
