[project]
name = "exobrain-air"
version = "0.1.0"
description = "RAG数据清洗管道 - 基于小模型的本地文本清洗工具"
requires-python = ">=3.11"
dependencies = [
    "gradio>=4.0.0",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
